--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.5.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
