--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,13 +11,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.1.2",
     "aos": "^2.3.4",
+    "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.487.0",
     "ngrok": "^5.0.0-beta.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "styled-components": "^6.1.17"
+    "react-router-dom": "^7.4.1",
+    "styled-components": "^6.1.17",
+    "tailwindcss": "^4.1.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
